tests/ui/error-codes/E0084.rs
#[repr(i32)] //~ ERROR: E0084
enum Foo {}

fn main() {
}
